--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,10 +3,11 @@
     "jsx": "react",
     "target": "ESNext",
     "outDir": "./dist",
-    "module": "ESNext",
+    "module": "NodeNext",
     "sourceMap": true,
     "esModuleInterop": true,
-    "moduleResolution": "Node",
+    "types": ["node"],
+    "moduleResolution": "NodeNext",
     "forceConsistentCasingInFileNames": true,
     "lib": ["ESNext", "DOM.Iterable", "DOM"],
     "strict": true,
