--- a/package.json
+++ b/package.json
@@ -38,9 +38,11 @@
     "@types/styled-components": "^5.1.30",
     "@typescript-eslint/eslint-plugin": "^6.11.0",
     "@typescript-eslint/parser": "^6.11.0",
+    "axios": "^1.6.2",
     "babel-loader": "^9.1.3",
     "babel-preset-react-app": "^10.0.1",
     "css-loader": "^6.8.1",
+    "dotenv": "^16.3.1",
     "eslint": "^8.53.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.1.0",
