--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,6 +26,7 @@
     "no-console": 0,
     "import/prefer-default-export": "off",
     "react/function-component-definition": "off",
-    "import/no-duplicates": "off"
+    "import/no-duplicates": "off",
+    "@typescript-eslint/no-unused-vars": "off"
   }
 }
