--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "datepicker-yermik",
+  "name": "datepicker-xyermik",
   "version": "1.0.0",
   "description": "",
   "main": "dist/cjs/index.js",
@@ -10,7 +10,9 @@
     "storybook": "storybook dev -p 4500",
     "lint": "eslint .",
     "lint:fix": "eslint --fix .",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "build-storybook": "sb build",
+    "deploy-storybook": "yarn run build-storybook && gh-pages -d storybook-static"
   },
   "keywords": [],
   "author": {
@@ -22,6 +24,7 @@
     "@babel/preset-env": "^7.23.3",
     "@babel/preset-react": "^7.23.3",
     "@babel/preset-typescript": "^7.23.3",
+    "@rollup/plugin-alias": "^5.0.1",
     "@rollup/plugin-babel": "^6.0.4",
     "@rollup/plugin-commonjs": "^25.0.7",
     "@rollup/plugin-node-resolve": "^15.2.3",
@@ -54,6 +57,7 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-plugin-storybook": "^0.6.15",
+    "gh-pages": "^6.1.0",
     "husky": "^8.0.0",
     "prettier": "^3.1.0",
     "react": "^18.2.0",
