--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,5 +21,5 @@
     }
   },
   "include": ["src/**/*", "rollup.config.mjs"],
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["node_modules", "dist", "storybook-static"]
 }
