--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -10,10 +10,12 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - name: Use Node.js 14.x
+      - name: Use Node.js 20.x
         uses: actions/setup-node@v1
         with:
-          node-version: 14.x
+          node-version: 20.x
+      - name: Install Yarn
+        run: npm install -g yarn@4.0.2
       - run: yarn install
       - run: yarn build
       - run: yarn deploy-storybook
