--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,7 +36,7 @@ jobs:
         run: yarn install
 
       - name: Lint Code
-        run: yarn run lint
+        run: yarn lint
 
       - name: Build
-        run: yarn run build
+        run: yarn build
