--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Use Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 20.x
+          node-version: 18.x
 
       - name: Cache Node.js modules
         uses: actions/cache@v3
@@ -30,6 +30,7 @@ jobs:
         run: npm install -g yarn
       - name: Install Dependencies
         run: yarn install
-
+      - name: Run lint
+        run: npm run lint
       - name: Build
         run: yarn build
