--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "babel-preset-react-app": "^10.0.1",
     "css-loader": "^6.8.1",
     "dotenv": "^16.3.1",
-    "eslint": "^8.53.0",
+    "eslint": "^8.0.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.1.0",
     "eslint-config-prettier": "^9.0.0",
@@ -75,7 +75,8 @@
     "typescript": "^5.2.2"
   },
   "resolutions": {
-    "jackspeak": "2.3.5"
+    "jackspeak": "2.3.5",
+    "strip-ansi": "^6.0.1"
   },
   "peerDependencies": {
     "react": "^18.2.0",
