--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,6 +31,6 @@ jobs:
       - name: Install Dependencies
         run: yarn install
       - name: Run lint
-        run: npm run lint
+        run: yarn lint
       - name: Build
         run: yarn build
