--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
     "styled-components": "^6.1.1",
     "tsconfig-paths-webpack-plugin": "^4.1.0",
     "tslib": "^2.6.2",
-    "typescript": "^5.2.2"
+    "typescript": "5.2.2"
   },
   "resolutions": {
     "jackspeak": "2.3.5",
