--- a/package.json
+++ b/package.json
@@ -75,18 +75,15 @@
     "typescript": "5.2.2"
   },
   "resolutions": {
-    "jackspeak": "2.3.5"
+    "jackspeak": "2.3.5",
+    "strip-ansi": "^6.0.1",
+    "string-width": "^4.2.2",
+    "wrap-ansi": "^7.0.0"
   },
   "peerDependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "styled-components": "^6.1.1"
   },
-  "packageManager": "yarn@1.22.21",
-  "dependencies": {
-    "jackspeak": "2.3.6",
-    "strip-ansi": "^6.0.1",
-    "string-width": "^4.2.2",
-    "wrap-ansi": "^7.0.0"
-  }
+  "packageManager": "yarn@1.22.21"
 }
