fix: switch yarn versions

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,6 +28,10 @@ jobs:
             ${{ runner.OS }}-yarn-
       - name: Install Yarn
         run: npm install -g yarn
+      - name: Enable corepack
+        run: corepack enable
+      - name: Upgrade yarn
+        run: yarn set version berry
       - name: Install Dependencies
         run: yarn install
       - name: Run lint
