--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@types/styled-components": "^5.1.30",
-    "@typescript-eslint/eslint-plugin": "^6.11.0",
+    "@typescript-eslint/eslint-plugin": "6.11.0",
     "@typescript-eslint/parser": "^6.11.0",
     "axios": "^1.6.2",
     "babel-loader": "^9.1.3",
@@ -84,6 +84,5 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "styled-components": "^6.1.1"
-  },
-  "packageManager": "yarn@1.22.21"
+  }
 }
