--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "storybook": "storybook dev -p 4500",
     "lint": "eslint .",
     "lint:fix": "eslint --fix .",
+    "test": "jest",
     "prepare": "husky install",
     "build-storybook": "sb build",
     "deploy-storybook": "yarn run build-storybook && gh-pages -d storybook-static"
@@ -35,6 +36,10 @@
     "@storybook/addon-themes": "^7.5.3",
     "@storybook/react": "^7.5.3",
     "@storybook/react-webpack5": "^7.5.3",
+    "@testing-library/jest-dom": "^6.1.4",
+    "@testing-library/react": "^14.1.2",
+    "@testing-library/user-event": "^14.5.1",
+    "@types/jest": "^29.5.9",
     "@types/node": "^20.9.0",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
@@ -59,6 +64,8 @@
     "eslint-plugin-storybook": "^0.6.15",
     "gh-pages": "^6.1.0",
     "husky": "^8.0.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "prettier": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -70,6 +77,8 @@
     "storybook": "^7.5.3",
     "style-loader": "^3.3.3",
     "styled-components": "^6.1.1",
+    "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.1",
     "tsconfig-paths-webpack-plugin": "^4.1.0",
     "tslib": "^2.6.2",
     "typescript": "5.2.2"
