feat: add date picker component
* feat: add input

* fix: fix input bugs

* feat: add EB

* fix: fix config

* feat: add date picker

* feat: add correct input linking with calendar

* feat: add yearly and monthly date changer

* feat: add holidays

* feat: add HOC as decorator pattern for calendar

* fix: fix linter problems

* feat: add storybook deploy

* feat: add ci/cd

* fix: fix ci/cd

* fix: fix yarn

* fix: fix pr problems and ci

* fix: fix ci

* feat: change date switching logic

* fix: remove linting

* fix: downgrade eslint to 8.0.0

* fix: reinstall some libs

* fix: fix version and add resolutions

* fix: fix deps

* fix: switch yarn versions

* fix: fix pr problems

* feat: add light/dark theming

* fix: lint

* refactor: destructurized props

* fix: fix cd

* fix: fix calendar date change mechanism

* fix: fix pr problems

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,12 +20,29 @@
     "sourceType": "module"
   },
   "plugins": ["@typescript-eslint", "react", "simple-import-sort", "prettier"],
+  "settings": {
+    "import/resolver": {
+      "typescript": {}
+    }
+  },
   "rules": {
     "simple-import-sort/imports": "error",
     "simple-import-sort/exports": "error",
     "no-console": 0,
     "import/prefer-default-export": "off",
     "react/function-component-definition": "off",
-    "import/no-duplicates": "off"
+    "import/no-duplicates": "off",
+    "@typescript-eslint/no-unused-vars": "off",
+    "@typescript-eslint/no-shadow": "off",
+    "react/jsx-props-no-spreading": "off",
+    "import/extensions": [
+      "error",
+      "ignorePackages",
+      {
+        "ts": "never",
+        "tsx": "never"
+      }
+    ],
+    "import/no-extraneous-dependencies": "off"
   }
 }
