--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Output and node modules
 /dist
 /node_modules
+storybook-static
 
 # Environment
 .env
@@ -28,3 +29,4 @@
 # Tests
 /coverage
 /.nyc_output
+.yarn
