--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "datepicker-yermik",
+  "name": "datepicker-xyermik",
   "version": "1.0.0",
   "description": "",
   "main": "dist/cjs/index.js",
@@ -10,7 +10,9 @@
     "storybook": "storybook dev -p 4500",
     "lint": "eslint .",
     "lint:fix": "eslint --fix .",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "build-storybook": "sb build",
+    "deploy-storybook": "yarn run build-storybook && gh-pages -d storybook-static"
   },
   "keywords": [],
   "author": {
@@ -22,6 +24,7 @@
     "@babel/preset-env": "^7.23.3",
     "@babel/preset-react": "^7.23.3",
     "@babel/preset-typescript": "^7.23.3",
+    "@rollup/plugin-alias": "^5.0.1",
     "@rollup/plugin-babel": "^6.0.4",
     "@rollup/plugin-commonjs": "^25.0.7",
     "@rollup/plugin-node-resolve": "^15.2.3",
@@ -29,26 +32,33 @@
     "@storybook/addon-essentials": "^7.5.3",
     "@storybook/addon-interactions": "^7.5.3",
     "@storybook/addon-links": "^7.5.3",
+    "@storybook/addon-themes": "^7.5.3",
     "@storybook/react": "^7.5.3",
     "@storybook/react-webpack5": "^7.5.3",
+    "@types/node": "^20.9.0",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@types/styled-components": "^5.1.30",
-    "@typescript-eslint/eslint-plugin": "^6.11.0",
+    "@typescript-eslint/eslint-plugin": "6.11.0",
     "@typescript-eslint/parser": "^6.11.0",
+    "axios": "^1.6.2",
     "babel-loader": "^9.1.3",
     "babel-preset-react-app": "^10.0.1",
     "css-loader": "^6.8.1",
-    "eslint": "^8.53.0",
+    "dotenv": "^16.3.1",
+    "eslint": "^8.54.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.1.0",
     "eslint-config-prettier": "^9.0.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.29.0",
     "eslint-plugin-jsx-a11y": "^6.8.0",
     "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-plugin-storybook": "^0.6.15",
+    "gh-pages": "^6.1.0",
+    "husky": "^8.0.0",
     "prettier": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -59,12 +69,16 @@
     "rollup-plugin-typescript": "^1.0.1",
     "storybook": "^7.5.3",
     "style-loader": "^3.3.3",
+    "styled-components": "^6.1.1",
+    "tsconfig-paths-webpack-plugin": "^4.1.0",
     "tslib": "^2.6.2",
-    "typescript": "^5.2.2",
-    "husky": "^8.0.0"
+    "typescript": "5.2.2"
   },
   "resolutions": {
-    "jackspeak": "2.1.1"
+    "jackspeak": "2.3.5",
+    "strip-ansi": "^6.0.1",
+    "string-width": "^4.2.2",
+    "wrap-ansi": "^7.0.0"
   },
   "peerDependencies": {
     "react": "^18.2.0",
