--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -11,7 +11,10 @@ jobs:
     steps:
       - name: "check out git repo"
         uses: actions/checkout@v4
-
+      - name: Set up Git user
+        run: |
+          git config --global user.name "${{ secrets.GIT_USER_NAME }}"
+          git config --global user.email "${{ secrets.GIT_USER_EMAIL }}"
       - name: Use Node.js
         uses: actions/setup-node@v4
         with:
