--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "datepicker-xyermik",
   "version": "1.0.0",
-  "description": "",
+  "description": "A datepicker library",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
   "types": "dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "scripts": {
-    "build": "rollup -c --bundleConfigAsCjs",
+    "build": "rollup -c",
     "storybook": "storybook dev -p 4500",
     "lint": "eslint .",
     "lint:fix": "eslint --fix .",
